--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta
       name="viewport"
-      content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>Fitness App</title>
+    <style>
+      html,
+      body,
+      #root {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
-    <script>
+
+    <script type="module">
       const tg = window.Telegram.WebApp;
-      tg.expand();
+      if (tg) {
+        tg.ready();
+        tg.expand();
+      }
     </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
